--- a/login.html
+++ b/login.html
@@ -11,21 +11,23 @@
     <form>
         <div class="container">
             <div class="box">
-             <div>
-            <label for="login">Login:</label>
-            <input type="text" id="login" name="login" required>
-             </div>
-            <div>
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
-            </div >
-            <input type="submit" value="Enviar">
-             
-            <input type="reset" value="Limpar">
-            
-            <div>
-            <a href="#">Esqueceu a senha?</a>
-            </div>
+                <div>
+                    <label for="login">Login:</label>
+                    <input type="text" id="login" name="login" required>
+                </div>
+
+                <div>
+                    <label for="password">Senha:</label>
+                    <input type="password" id="password" name="password" required>
+                </div >
+
+                <div class="container_input">
+                    <input class="buton" type="submit" value="Enviar">
+                    <input class="buton" type="reset" value="Limpar">
+                </div>
+                <div>
+                    <a href="#">Esqueceu a senha?</a>
+                </div>
             </div>
         </div>
     </form>
